# crm-solar-withelabel

./: .env.deploy.example  .env.dev.example  .env.prod.example  .gitignore  ATUALIZAR_DOCKER.md  ATUALIZAR_PARA_PDF.md  CHECKLIST-DEPLOY.md  CONTRATO - 1 INVERSOR - ORIGINAL.docx  CORRECOES_ERRO_500.md  DEPLOY-EC2-COMMANDS.md  DEPLOY-SIMPLES.md  DEPLOY_GUIDE.md  DOCKER.md  Dockerfile  IA_FEATURES.md  IMPLEMENTACAO_GERACAO_ORCAMENTO.md  LEIA-ME-CORRECAO.md  PROMPT-AMAZON-Q.md  PROMPT-CURTO.txt  PROPOSTA COMERCIAL - MAB.docx  README.md  README_SOLUCAO_PDF.md  RESOLVER_ERRO_PDF.md  SOLUCAO_COMPLETA_PDF.md  VARIAVEIS_SUPORTADAS.md  alembic-upgrade.bat  diagnostico.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  fix-backend.bat  install-ia.bat  logs-backend.bat  restart-backend.bat  setup.bat  start.bat  testar-orcamento.bat
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  MIGRATION_GUIDE.py  README.md  alembic.ini  ativar_templates.sql  check_inversores.py  check_paineis.py  completar_clientes.py  contrato_temp.docx  corrigir_overload.py  criar_template.py  criar_template_exemplo.py  criar_template_final.py  criar_template_orcamento.py  diagnostico_pdf.py  entrypoint.sh  extract_docx.py  gerar_contratos_massa.py  gerar_dados_massa.py  init_db.py  limpar_dados.py  manage.py  pyproject.toml  recalcular_orcamentos.py  requirements.txt  resolver_erro_pdf.py  seed.py  seed_fixed_tenant.py  seed_inversores_completo.py  seed_paineis.py  setup_inicial.py  test.db  test_gemini.py  test_orcamentos.py  test_security.py  (+4 more)
(+422 files in other folders)
